--- a/xss.tex
+++ b/xss.tex
@@ -42,4 +42,4 @@ http://stealcookie.com?auth=AJHVML43LDSL42SC6DF;
 
 На 2009 г. 80\% обнаруженных уязвимостей веб-сайтов являются XSS-уязвимостями.
 
-Стандартный способ защиты от XSS-атак заключается в фильтрации, замене, экранировании символов и слов введённого текста пользователем: \texttt{<}, \texttt{>}, \texttt{/}, \texttt{\textbackslash}, \texttt{"}, \texttt{'}, \texttt{(}, \texttt{)}, \texttt{script}, \texttt{javascript} и~др., а также в обработке кодировок символов.
+Стандартный способ защиты от XSS-атак заключается в фильтрации, замене, экранировании символов и слов введённого пользователем текста: \texttt{<}, \texttt{>}, \texttt{/}, \texttt{\textbackslash}, \texttt{"}, \texttt{'}, \texttt{(}, \texttt{)}, \texttt{script}, \texttt{javascript} и~др., а также в обработке кодировок символов.
